apps/downloads/torrent/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rtorrentvpn
  name: rtorrentvpn
  namespace: downloads  
spec:
  selector:
    matchLabels:
      app: rtorrentvpn
  template:
    metadata:
      labels:
        app: rtorrentvpn
    spec:
      containers:
          image: binhex/arch-rtorrentvpn
          name: rtorrentvpn
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9080                 
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8989
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 8989
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /data
              name: torrent-downloads        
            - mountPath: /config
              name: torrent-config
      volumes:
        - name: torrent-config
          persistentVolumeClaim:
            claimName: pvc-torrent-config
        - name: torrent-downloads
          persistentVolumeClaim:
            claimName: pvc-torrent-downloads
