apps/downloads/torrent/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: torrent
  namespace: torrent 
  name: svc-rtorrentvpn
spec:
  ports:
  ports:
    - port: 9443
      protocol: TCP
      targetPort: https-torrent
    - name: "51415"
      port: 51415
      targetPort: 51415-torrent
    - name: "3000"
      port: 3000 
      targetPort: 3000-torrent
  selector:
    app: torrent
