apps/downloads/torrent/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: torrent
  namespace: torrent 
  name: torrent-ingress 
  annotations:
    #kubernetes.io/ingress.class: nginx  
    kubernetes.io/ingress.class: public
spec:
  rules:
  - host: torrent.ting
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: svc-torrent
            port:
              name: http
